--- a/project-stackaflag.html
+++ b/project-stackaflag.html
@@ -159,9 +159,7 @@
 							</div>
 							<div class="col-md-7">
 								<p>The first thing I did was to create an MVP of the solution to test with potential users. Made out of three layers of cardboard, some duct tape and a lot of glue, I got to test the first three levels of Stack A Flag.</p>
-								<p>Eventually I started to code, and by the end of the week I had already my full experience where I went through the basics of layout.</p>
-								<p>Besides having a great interest in the vexillography, flags seemed to be a perfect way to train the brain to see the forms from a different point of view. Thus, one thing led to another and when I realized I had created a puzzle game where the user’s goal was to use SwiftUI layout tools to replicate national flags.</p>
-
+								<p>After some positive feedbacks I started to code, and by the end of the week I had already developed the full experience which consisted in five levels. In each level I went through a fundamentals of layout in SwiftUI, with exception of the last one, where the user had to apply all the knowledge from previous levels.</p>
 									<!-- <p>You can download the first version of the app on the<a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p> -->
 									<!-- <li>Playground</li>
 									<li>iOS Development</li> -->
@@ -193,12 +191,28 @@
 			</div>
 			<div class="spacer">
 				<div class="container">
+					<div class="project-content mar-top-lg">
+						<div class="row">
+							<div class="col-md-3 offset-md-1">
+								<h3 class="title">Result</h3>
+							</div>
+							<div class="col-md-7">
+								<p>This interactive experince was submitted to Apple's Swift Student Challenge 2020 and was selected among 350 projects made by students from around the world.</p>
+								<p>As a personal challenge I started working on a mobile version, so stay tuned!</p>
+									<!-- <p>You can download the first version of the app on the<a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p> -->
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								<!-- </ul> -->
+								<!-- <br> <p> The app is in it's first version and you can <a href="https://apps.apple.com/br/app/juicy-way/id1502906162">download it</a> at the App Store.</p> -->
+							</div>
+						</div>
+					</div>
 					<div class="mar-top-lg">
 						<div class="row">
-							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-2/image_5.png" alt="Partner Pages"></div>
+							<div class="col-md-12">
+								<div class="project-image"><img src="img/project-stackaflag/stackappa.png" alt="Partner Pages"></div>
 							</div>
-							<div class="col-md-6">
+							<!-- <div class="col-md-6">
 								<div class="project-image"><img src="img/project-2/image_6.png" alt="Partner Pages"></div>
 							</div>
 						</div>
@@ -209,8 +223,9 @@
 							<div class="col-md-6">
 								<div class="project-image"><img src="img/project-2/image_8.png" alt="Partner Pages"></div>
 							</div>
-						</div>
+						</div> -->
 					</div>
+
 					<div class="next-project">
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
