--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -168,7 +168,7 @@
 
 								<!-- <ul class="project-services"> -->
 								<ul class="project-services">
-									<li style="color:#272838">You can download the first version of the app on the <a class="smooth-leave" href="https://youtu.be/pSGEoZ1iin4" target="_blank" rel="noopener noreferrer"> App Store.</a></p>
+									<li style="color:#272838">You can download the first version of the app on the <a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p>
 									<!-- <li>Playground</li>
 									<li>iOS Development</li> -->
 								</ul>
