--- a/project-hubli.html
+++ b/project-hubli.html
@@ -85,7 +85,7 @@
 						<div class="row">
 
 							<div class="col-md-10 offset-md-1">
-								<h3>Methology</h3>
+								<h3>The CBL</h3>
 								<p>This project was conceived at Apple Developer Academy, by a group of five students. At the Academy we use the <b>Challenge Based Learning</b> (or CBL) which provides an efficient and effective framework for learning while solving real-world challenges. </p>
 								<p>The Challenge Learning Framework is divided into three interconnected phases: <b>Engage, Investigate and Act.</b>
 								Each phase prepare you to move to the next phase. Within each of the phases there are opportunities for applying all sorts of methodologies and if necessary a return to an earlier phase.</p>
