--- a/project-stackaflag.html
+++ b/project-stackaflag.html
@@ -184,9 +184,11 @@
 					<div class="next-slide"></div>
 				</div>
 				<div class="owl-carousel">
-					<div class="slide"><img src="img/project-2/image_2.png" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-2/image_3.png" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-2/image_4.png" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-stackaflag/italy.mov" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-stackaflag/colombia.jpeg" alt="Partner Pages"></div>
+										<div class="slide"><img src="img/project-stackaflag/japan.jpeg" alt="Partner Pages"></div>
+															<div class="slide"><img src="img/project-stackaflag/austria.jpeg" alt="Partner Pages"></div>
+																				<div class="slide"><img src="img/project-stackaflag/laos.jpeg" alt="Partner Pages"></div>
 				</div>
 			</div>
 			<div class="spacer">
