--- a/project-stackaflag.html
+++ b/project-stackaflag.html
@@ -199,7 +199,7 @@
 								<h3 class="title">Result</h3>
 							</div>
 							<div class="col-md-7">
-								<p>This interactive experince was submitted to Apple's Swift Student Challenge 2020 and was selected among 350 projects made by students from around the world.</p>
+								<p>This interactive experience was submitted to Apple's Swift Student Challenge 2020 and was selected among 350 projects made by students from around the world.</p>
 								<p>As a personal challenge I started working on a mobile version, so stay tuned!</p>
 									<!-- <p>You can download the first version of the app on the<a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p> -->
 									<!-- <li>Playground</li>
