--- a/about.html
+++ b/about.html
@@ -175,10 +175,10 @@
 									<ul>
 										<li>Visual Identity</li>
 										<li>Prototype</li>
-										<li>Customer Analysis</li>
-										<li>User Guides & Storylines</li>
 										<li>Design System</li>
 										<li>Animation</li>
+										<li>Metrics Analysis</li>
+										<li>User Guides & Storylines</li>
 									</ul>
 								</div>
 							</div>
