--- a/project-hubli.html
+++ b/project-hubli.html
@@ -177,11 +177,18 @@
 								<div class="project-image"><img src="img/project-hubli/image_5ab.png" alt="Flyby"></div>
 							</div>
 							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_5bbb.png" alt="Flyby"></div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_5ab.png" alt="Flyby"></div>
+							</div>
+							<div class="col-md-6">
 								<div class="project-image"><img src="img/project-hubli/image_5b.png" alt="Flyby"></div>
 							</div>
 						</div>
 					</div>
-
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
