--- a/project-hubli.html
+++ b/project-hubli.html
@@ -119,7 +119,7 @@
 								<h3 class="title">Engage</h3>
 							</div>
 							<div class="col-md-7">
-								<p>In the first phase, we move from an abstract big idea to a concrete and actionable challenge </p>
+								<p>In the first phase, we move from an abstract big idea to a concrete and actionable challenge.</p>
 								<p>To find the most suitable theme that would engage the whole team, we went through a series of processes. And a series of virtual post-its. Seriously.</p>
 							</div>
 						</div>
@@ -174,18 +174,18 @@
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_5ab.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-hubli/image_4aaaa.png" alt="Partner Pages"></div>
 							</div>
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_5bbb.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-hubli/image_4aaa.png" alt="Partner Pages"></div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_5ab.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-hubli/image_4aa.png" alt="Partner Pages"></div>
 							</div>
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_5b.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-hubli/image_5aa.png" alt="Partner Pages"></div>
 							</div>
 						</div>
 					</div>
@@ -210,21 +210,42 @@
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_4a.png" alt="Partner Pages"></div>
+								<div class="project-image"><img src="img/project-hubli/image_5ab.png" alt="Flyby"></div>
 							</div>
 							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_3.png" alt="Partner Pages"></div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_2.png" alt="Partner Pages"></div>
-							</div>
-							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-hubli/image_4.png" alt="Partner Pages"></div>
+								<div class="project-image"><img src="img/project-hubli/image_5bbb.png" alt="Flyby"></div>
 							</div>
 						</div>
 					</div>
+					<div class="project-content mar-top-lg">
+						<div class="row">
+							<div class="col-md-3 offset-md-1">
+								<h3 class="title">Act</h3>
+							</div>
+							<div class="col-md-7">
+								<p>Before creating this endless space fruity chaser, we started by gathering some references of casual games and graphic elements. By using forced connections, we were able to bring two unconventional topics together, such as Fruit and Space.</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-10 offset-md-1">
+							<div class="content-quote mar-top-lg">
+								<p>The interface of the menu revolves around the concept of having the game just one play-tap away. To achieve that, it was designed to work as a layer that goes on top while the intergalactic spaceship is always traveling through the Juicy Way right behind it.</p>
+								<!-- <span class="author">Sam Lane, Co-Founder @ Alphabet</span> -->
+							</div>
+						</div>
+					</div>
+					<div class="mar-top-lg">
+						<div class="row">
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_5ab.png" alt="Flyby"></div>
+							</div>
+							<div class="col-md-6">
+								<div class="project-image"><img src="img/project-hubli/image_5b.png" alt="Flyby"></div>
+							</div>
+						</div>
+					</div>
+
 					<!-- <div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-6">
