--- a/project-hubli.html
+++ b/project-hubli.html
@@ -109,7 +109,7 @@
 						<div class="col-md-10 offset-md-1">
 							<div class="mar-top-lg">
 								<p>The interface of the menu revolves around the concept of having the game just one play-tap away. To achieve that, it was designed to work as a layer that goes on top while the intergalactic spaceship is always traveling through the Juicy Way right behind it.</p>
-								<!-- <span class="author">Sam Lane, Co-Founder @ Alphabet</span> -->
+								<span class="author">Sam Lane, Co-Founder @ Alphabet</span> -->
 								<!-- </div>
 							</div>
 						</div> -->
@@ -159,6 +159,27 @@
 							<div class="col-md-6">
 								<div class="project-image"><img src="img/project-hubli/image_4.png" alt="Partner Pages"></div>
 							</div>
+						</div>
+					</div>
+					<div class="project-content mar-top-lg">
+						<div class="row">
+
+							<div class="col-md-10 offset-md-1">
+								<p>With this process we were able to decide on our big idea: <i>future of work</i>. The big idea is a broad theme or concept that can be explored in multiple ways and is important to you and the larger community.</p>
+								<p>Along with the big idea came a wide variety of essential questions, and we decided that the one that most motivated us was <i>how to stimulate collaborative intelligence in the future of work?</i></p>
+									<p>But before the engage phase concludes, we also needed our challenge, which is turning the essential question into a call to action to learn deeply about one area of the subject. We identified as our actionable challenge: <i>use the collaborative intelligence in the educators work.</i></p>
+	<!-- <div style="padding-top: 20px"> -->
+	<!-- <ul class="project-services">
+	<li style="color: #a6a7b5">2019</li> -->
+	<!-- <li>Art Direction</li> -->
+	<!-- </ul> -->
+	<!-- </div> -->
+								<!-- <ul class="project-services">
+									<li>Experiment</li> -->
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								<!-- </ul> -->
+						</div>
 						</div>
 					</div>
 					<div class="project-content mar-top-lg">
