--- a/project-hubli.html
+++ b/project-hubli.html
@@ -188,10 +188,13 @@
 								<h3 class="title">Investigate</h3>
 							</div>
 							<div class="col-md-7">
-								<p>Before creating this endless space fruity chaser, we started by gathering some references of casual games and graphic elements. By using forced connections, we were able to bring two unconventional topics together, such as Fruit and Space.</p>
+								<p>The investigation phase begins with generating questions related to the challenge. The questions include everything that needs to be learned to develop an informed solution to the challenge.</p>
+
+<p>As guiding activities and resources we used benchmarking, academic research, social networks, interviews with specialists, and others.</p>
 							</div>
 						</div>
 					</div>
+
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-6">
@@ -208,6 +211,30 @@
 							<div class="col-md-6">
 								<div class="project-image"><img src="img/project-hubli/image_5aa.png" alt="Partner Pages"></div>
 							</div>
+						</div>
+					</div>
+					<div class="project-content mar-top-lg">
+						<div class="row">
+
+							<div class="col-md-10 offset-md-1">
+								<p>The benchmarking was divided in three categories: education, technology and work/workforce. Collecting this data was essential in the diverge state that we were. With benchmarking it was possible to perceive trends and create scenarios based on them.</p>
+
+	<p>We also built a tree of knowledge based on more than 40 scientific articles, separated into the themes of: learning methodologies, future of teaching, future of work and collaborative intelligence. The Academic research led us to go out there and talk with experts.</p>
+	<p>To get closer to the challenge, observation was carried out through social networks by joined 12 groups that concerned education and technology, teaching and transformations and future of education.</p>
+	<p>With all of this it was possible to identify the difficulties, trends, innovations, methodologies and content that are being shared by the community of educators, specially in the face of the pandemic scenario.</p>
+
+						<!-- <div style="padding-top: 20px"> -->
+	<!-- <ul class="project-services">
+	<li style="color: #a6a7b5">2019</li> -->
+	<!-- <li>Art Direction</li> -->
+	<!-- </ul> -->
+	<!-- </div> -->
+								<!-- <ul class="project-services">
+									<li>Experiment</li> -->
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								<!-- </ul> -->
+						</div>
 						</div>
 					</div>
 					<div class="project-content mar-top-lg">
