--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 										</ul> -->
 									</div>
 
-								</a><a class="work-item" href="#" data-groups="[&quot;app&quot;]">
+								</a><a class="work-item" href="#" data-groups="[&quot;branding&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_6.png" alt="Design 360° Magazine">
 									</div>
@@ -190,17 +190,17 @@
 																			</ul> -->
 																		</div>
 
-								</a><a class="work-item" href="#" data-groups="[&quot;branding&quot;]">
+								<!-- </a><a class="work-item" href="#" data-groups="[&quot;branding&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_7.png" alt="Open Your Charisma">
 									</div>
 									<div class="work-description">
-										<h4 class="work-title">ADS Eletro</h4>
+										<h4 class="work-title">ADS Eletro</h4> -->
 										<!-- <ul class="work-services">
 											<li>Typography</li>
 										</ul> -->
-									</div>
-								</a>
+									<!-- </div>
+								</a> -->
 								<!-- <a class="work-item" href="#" data-groups="[&quot;branding&quot;]"> -->
 									<!-- <div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_8.png" alt="Flyby">
