--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 										</ul> -->
 									</div>
 
-								</a><a class="work-item" href="#" data-groups="[&quot;branding&quot;]">
+								</a><a class="work-item" href="project-ventum.html" data-groups="[&quot;branding&quot;]">
 									<div class="work-image">
 										<div class="icon-arrow"></div><img src="img/works/work_6.png" alt="Design 360° Magazine">
 									</div>
