--- a/project-ventum.html
+++ b/project-ventum.html
@@ -51,63 +51,54 @@
 		</header>
 		<main>
 			<div class="spacer">
-				<div class="intro">
-					<div class="intro-image"><img src="img/project-juicyway/cover.mp4" alt="Damoon"></div>
-					<div class="intro-text">
-						<h1 style="color:#FFFFFF">Juicy Way</h1>
-
+				<div class="row">
+					<div class="col-md-8 offset-md-2">
+						<div class="project-intro mar-top-lg">
+							<h1 class="project-title">Ventum</h1>
+							<p class="project-description">An app that focuses on turning the act of planning and sharing travel plans into a fun experience.</p>
+							<ul class="project-services">
+								<li>2019</li>
+								<!-- <li>Art Direction</li> -->
+							</ul>
 						</div>
+					</div>
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
-							<div class="project-intro mar-top-lg">
-								<!-- <h1 class="project-title">Juicy Way</h1> -->
-								<p class="project-description">Juicy Way is a galactic game that is set on a fruity galaxy. It is a free endless runner 2D experience created by a designer and a developer.</p>
-								<!-- <div style="padding-top: 20px"> -->
-								<ul class="project-services">
-									<li>2020</li>
-									<!-- <li>Art Direction</li> -->
-								</ul>
-							<!-- </div> -->
-								<!-- <ul class="project-services">
-									<li>App</li>
-								</ul> -->
-							</div>
-						</div>
-					</div>
-					<div class="row">
 						<div class="col-md-12">
 							<div class="mar-top-lg">
-								<div class="project-image"><img src="img/project-juicyway/image_1.png" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-ventum/ventumpng.png" alt="Flyby"></div>
 							</div>
 						</div>
 					</div>
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
-								<h3 class="title">The Flight Plan</h3>
+								<h3 class="title">Communication</h3>
 							</div>
 							<div class="col-md-7">
-								<p>At Apple Developer Academy we were challenged to develop and publish a <b>hyper casual game</b> and to apply the freemium monetization so we would be able to track the results from it. Some general parameters that we had to follow: hyper-casual game; preferably 2D with few visual elements and interactions; rapid phases/interactions lasting from ten seconds to two minutes. </p>
+
+								<p>
+										The main goal with the visual is to keep it relaxed and enjoyable, following the same interface experience proposed, which is quick and easy travel planning and registering. Identity and illustrations here played a key role in motivating and engaging.</p>
+
 							</div>
 						</div>
 					</div>
 					<div class="mar-top-lg">
 						<div class="row">
 							<div class="col-md-5">
-								<div class="project-image"><img src="img/project-juicyway/logo.mp4" alt="Flyby"></div>
+								<div class="project-image"><img src="img/project-ventum/image_3a.png" alt="Flyby"></div>
 							</div>
 							<div class="col-md-5 offset-md-2">
 								<div class="mar-top-xs">
-									<div class="project-image"><img src="img/project-juicyway/image_3.png" alt="Flyby"></div>
+									<div class="project-image"><img src="img/project-ventum/image_3aa.png" alt="Flyby"></div>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 offset-md-4">
 								<div class="mar-top-sm">
-									<div class="project-image"><img src="img/project-juicyway/image_4.png" alt="Flyby"></div>
+									<div class="project-image"><img src="img/project-ventum/image_3b.png" alt="Flyby"></div>
 								</div>
 							</div>
 						</div>
@@ -115,35 +106,22 @@
 					<div class="project-content mar-top-lg">
 						<div class="row">
 							<div class="col-md-3 offset-md-1">
-								<h3 class="title">Lifting Off</h3>
+								<h3 class="title">Identity</h3>
 							</div>
 							<div class="col-md-7">
-								<p>Before creating this endless space fruity chaser, we started by gathering some references of casual games and graphic elements. By using forced connections, we were able to bring two unconventional topics together, such as Fruit and Space.</p>
-							</div>
-						</div>
-					</div>
-					<div class="mar-top-lg">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-juicyway/image_5.png" alt="Flyby"></div>
-							</div>
-							<div class="col-md-6">
-								<div class="project-image"><img src="img/project-juicyway/image_6.png" alt="Flyby"></div>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-10 offset-md-1">
-							<div class="content-quote mar-top-lg">
-								<p>The interface of the menu revolves around the concept of having the game just one play-tap away. To achieve that, it was designed to work as a layer that goes on top while the intergalactic spaceship is always traveling through the Juicy Way right behind it.</p>
-								<!-- <span class="author">Sam Lane, Co-Founder @ Alphabet</span> -->
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<div class="mar-top-lg">
-								<div class="project-image"><img src="img/project-juicyway/image_9.png" alt="Flyby"></div>
+
+										<p>As for the name of the app, it was chosen for the word Ventum, meaning <i>breeze</i> or <i>air</i>  from Latin, due to the idea of freedom and movement often connected with the air element.
+										</p>
+										<p>On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for the perfect travel, and the lines that go beyond the limits of the central square indicates the routine break as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
+										</p>
+										<p>
+																		<!-- More information about the project on its <a href="https://www.dropbox.com/s/9c5lk49mw2peybr/VentumDocumentationFinal.pdf?dl=0">full documentation</a>. -->
+									</p>
+									<ul class="project-services">
+										<li style="color:#272838">More information about the project on its <a class="smooth-leave" href="https://youtu.be/pSGEoZ1iin4" target="_blank" rel="noopener noreferrer"> full documentation.</a></li>
+										<!-- <li>Playground</li>
+										<li>iOS Development</li> -->
+									</ul>
 							</div>
 						</div>
 					</div>
@@ -157,30 +135,6 @@
 							</div>
 						</div>
 					</div> -->
-					<div class="project-content mar-top-lg">
-						<div class="row">
-							<div class="col-md-3 offset-md-1">
-								<h3 class="title">Safe Landing</h3>
-							</div>
-							<div class="col-md-7">
-								<p>In the first week, we developed the basic mechanics and submitted to Test Flight; in the second, we included monetization and analytics, and submitted for publication; on the third and final week the focus was on user acquisition, campaign development and metrics tracking.</p>
-								<p> Besides the assets and visual identity, I projected the menu and the HUD, and coded both interfaces using SwiftUI while André Tosin developed the mechanics using SpriteKit.</p>
-
-								<!-- <ul class="project-services"> -->
-								<ul class="project-services">
-									<li style="color:#272838">You can download the first version of the app on the <a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p>
-									<!-- <li>Playground</li>
-									<li>iOS Development</li> -->
-								</ul>
-
-									<!-- <p>You can download the first version of the app on the<a class="smooth-leave" href="https://apps.apple.com/br/app/juicy-way/id1502906162" target="_blank" rel="noopener noreferrer"> App Store.</a></p> -->
-									<!-- <li>Playground</li>
-									<li>iOS Development</li> -->
-								<!-- </ul> -->
-								<!-- <br> <p> The app is in it's first version and you can <a href="https://apps.apple.com/br/app/juicy-way/id1502906162">download it</a> at the App Store.</p> -->
-							</div>
-						</div>
-					</div>
 					<!-- <div class="row">
 						<div class="col-md-12">
 							<div class="mar-top-lg">
@@ -188,6 +142,15 @@
 							</div>
 						</div>
 					</div> -->
+					<div class="project-content mar-top-lg">
+						<div class="row">
+							<div class="col-md-10 offset-md-1">
+
+<iframe width="1120" height="630" src="https://www.youtube.com/embed/XvGDjqSUUp0?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+						</div>
+					</div>
+
 					<div class="next-project">
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
