--- a/project-hubli.html
+++ b/project-hubli.html
@@ -334,13 +334,13 @@
 							</div>
 						</div>
 					</div> -->
-					
+
 
 					<div class="next-project">
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
 								<p>Next Project</p>
-								<h2><a href="#">Ventum</a></h2>
+								<h2><a href="project-stackaflag.html">Stack A Flag</a></h2>
 							</div>
 						</div>
 					</div>
