--- a/project-cubx.html
+++ b/project-cubx.html
@@ -137,7 +137,7 @@ In my first year applying for the scholarship, I created CUBX, a puzzle carefull
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
 								<p>Next Project</p>
-								<h2><a href="#">Ventum</a></h2>
+								<h2><a href="project-ventum.html">Ventum</a></h2>
 							</div>
 						</div>
 					</div>
