--- a/project-juicyway.html
+++ b/project-juicyway.html
@@ -191,8 +191,8 @@
 					<div class="next-project">
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
-								<p>Next Project</p>
-								<h2><a href="#">Ventum</a></h2>
+								<p>Previous Project</p>
+								<h2><a href="project-ventum.html">Ventum</a></h2>
 							</div>
 						</div>
 					</div>
