--- a/project-stackaflag.html
+++ b/project-stackaflag.html
@@ -232,7 +232,7 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-8 offset-lg-3 offset-md-2">
 								<p>Next Project</p>
-								<h2><a href="#">Ventum</a></h2>
+								<h2><a href="project-cluster.html">Cluster</a></h2>
 							</div>
 						</div>
 					</div>
