--- a/project-cluster.html
+++ b/project-cluster.html
@@ -81,6 +81,11 @@
 									<li>iOS Development</li> -->
 								<!-- </ul> -->
 								<!-- <br> <p> The app is in it's first version and you can <a href="https://apps.apple.com/br/app/juicy-way/id1502906162">download it</a> at the App Store.</p> -->
+								<ul class="project-services">
+									<li style="color:#272838">More information about this project on their <a class="smooth-leave" href="https://clusterforchange.com" target="_blank" rel="noopener noreferrer"> website.</a></p>
+									<!-- <li>Playground</li>
+									<li>iOS Development</li> -->
+								</ul>
 							</div>
 						</div>
 					</div>
@@ -103,14 +108,17 @@
 				</div>
 				<div class="owl-carousel">
 					<div class="slide"><img src="img/project-cluster/Cluster1.jpg" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-cluster/Cluster2.jpg" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-cluster/Cluster3.jpg" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-cluster/Cluster4.jpg" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-cluster/Cluster5.jpg" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-cluster/Cluster6.jpg" alt="Partner Pages"></div>
-					<div class="slide"><img src="img/project-cluster/Cluster7.jpg" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-cluster/Cluster2.png" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-cluster/Cluster3.png" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-cluster/Cluster5.png" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-cluster/Cluster4.png" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-cluster/Cluster6.png" alt="Partner Pages"></div>
+					<div class="slide"><img src="img/project-cluster/Cluster7.png" alt="Partner Pages"></div>
 				</div>
 			</div>
+
+
+
 			<div class="spacer">
 				<div class="container">
 					<div class="next-project">
