--- a/about.html
+++ b/about.html
@@ -540,7 +540,7 @@
 								<div class="address">
 									<!-- <p>26 Hillside Street<br>House 35<br>London, UK</p> -->
 									<p>London, UK</p>
-								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7878165755">+44 7897 364841</a>
+								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7897 3648415">+44 7897 364841</a>
 							</div>
 						</div>
 					</div>
