--- a/project-hubli.html
+++ b/project-hubli.html
@@ -314,7 +314,7 @@
 								<p>In the short term we pretend to implement the following features: improved metrics, AI based content recommendation, push notifications, real-time collaboration inside of links and contents and a redesign.</p>
 								<!-- <ul class="project-services"> -->
 								<ul class="project-services">
-									<li style="color:#272838">The whole process can be found <a class="smooth-leave" href="https://www.icloud.com/keynote/0sOFTokTi3t6AShQVR0ealZ4A#HubliPresentation" target="_blank" rel="noopener noreferrer">on this document.</a> If you want to know more about the second version of the project, you can check <a class="smooth-leave" href="https://www.dropbox.com/s/gitfaxuzpzhblky/HubliCase.pdf?dl=0" target="_blank" rel="noopener noreferrer">this presentation.</a></p> 
+									<li style="color:#272838">The whole process can be found <a class="smooth-leave" href="https://www.icloud.com/keynote/0sOFTokTi3t6AShQVR0ealZ4A#HubliPresentation" target="_blank" rel="noopener noreferrer">on this document.</a> If you want to know more about the second version of the project, you can check <a class="smooth-leave" href="https://www.dropbox.com/s/gitfaxuzpzhblky/HubliCase.pdf?dl=0" target="_blank" rel="noopener noreferrer">this presentation.</a></p>
 									<!-- <li>Playground</li>
 									<li>iOS Development</li> -->
 								</ul>
@@ -357,7 +357,7 @@
 								<div class="address">
 									<!-- <p>26 Hillside Street<br>House 35<br>London, UK</p> -->
 									<p>London, UK</p>
-								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7878165755">+44 78 7816 5755</a>
+								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7897 364841">+44 7897 364841</a>
 							</div>
 						</div>
 					</div>
