--- a/project-cubx.html
+++ b/project-cubx.html
@@ -154,7 +154,7 @@ In my first year applying for the scholarship, I created CUBX, a puzzle carefull
 								<div class="address">
 									<!-- <p>26 Hillside Street<br>House 35<br>London, UK</p> -->
 									<p>London, UK</p>
-								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7878165755">+44 78 7816 5755</a>
+								</div><a class="email" href="mailto:rodolfobiazi@icloud.com">rodolfobiazi@icloud.com</a><br><a class="phone" href="tel:+44 7897 364841">+44 7897 364841</a>
 							</div>
 						</div>
 					</div>
