--- a/project-cubx.html
+++ b/project-cubx.html
@@ -56,7 +56,7 @@
   <source src="img/project-cubx/cubx.webm" type='video/webm;codecs="vp8, vorbis"'/>
   <source src="img/project-cubx/cubx.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'/>
 </video> -->
-					<div class="intro-image"><img src="img/project-cubx/CUBXDivided.mp4" alt="Damoon"></div>
+					<div class="intro-image"><img src="img/project-cubx/CUBXDivided.mp4" alt="CUBX"></div>
 					<div class="intro-text">
 						<h1>CUBX</h1>
 					</div>
